--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <div class="section-title">
                 <h2>Who We Are</h2>
             </div>
+            <div> I am soulaymane</div>
             <div class="about-grid">
                 <!-- TODO: Member 2 code goes here -->
                 <div class="about-text fade-in-left">
