--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
                     <h3>Cyber Security</h3>
                     <p>Understand ethical hacking, encryption, and network safety.</p>
                 </div>
+                <!-- Card 4 -->
+                <div class="card fade-up delay-200">
+                    <div class="card-icon">🤖🔒</div>
+                    <h3>Iot</h3>
+                    <p>Internet of things </p>
+                </div>
                 <!-- End Member 3 -->
             </div>
         </div>
