we add the pictures of the members with a basic css style

--- a/index.html
+++ b/index.html
@@ -121,29 +121,17 @@
                 <!-- TODO: Member 4 code goes here -->
                 <!-- Member 1 -->
                 <div class="team-member fade-in">
-                    <div class="avatar-placeholder"></div>
-                    <h4>Alex Johnson</h4>
+                    <img src="pics/aya.jpeg" class="member-pic">
+                    <h4>Aya Benzian</h4>
                     <span>Member 1</span>
                 </div>
                 <!-- Member 2 -->
                 <div class="team-member fade-in">
-                    <div class="avatar-placeholder"></div>
-                    <h4>Sarah Lee</h4>
+                    <img src="pics/sara.jpeg" class="member-pic">
+                    <h4>Sara el habti </h4>
                     <span>Member 2</span>
                 </div>
-                <!-- Member 3 -->
-                <div class="team-member fade-in">
-                    <div class="avatar-placeholder"></div>
-                    <h4>Mike Chen</h4>
-                    <span>Member 3</span>
-                </div>
-                <!-- Member 4 -->
-                <div class="team-member fade-in">
-                    <div class="avatar-placeholder"></div>
-                    <h4>Emily Davis</h4>
-                    <span>Member 4</span>
-                </div>
-                <!-- End Member 4 -->
+                
             </div>
         </div>
     </section>
