commit-reda(I just added a role for eache member

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
          ========================================= -->
     <section id="contact" class="section-padding">
         <div class="container contact-wrapper">
-            <h2>Ready to Join?</h2>
+            <h2>Ready to Join?ujweihdkjwdw</h2>
             <p>Come to our next meetup at Building C, Room 304.</p>
             <a href="mailto:contact@itgeeks.edu" class="btn-outline">Send us an Email</a>
         </div>
