--- a/index.html
+++ b/index.html
@@ -71,83 +71,110 @@
             </div>
         </div>
     </section>
-
+    
     <!-- =========================================
-         MEMBER 3 AREA: ACTIVITIES / WORKSHOPS
-         Branch Name: feature-activities
-         Task: Create 3 cards for different workshops (Web, AI, CyberSec).
-         ========================================= -->
-    <section id="activities" class="section-padding">
-        <div class="container">
-            <div class="section-title">
-                <h2>Our Activities</h2>
-            </div>
-            <div class="cards-grid">
-                <!-- TODO: Member 3 code goes here -->
-                <!-- Card 1 -->
-                <div class="card fade-up">
-                    <div class="card-icon">💻</div>
-                    <h3>Web Development</h3>
-                    <p>Learn HTML, CSS, JS, and modern frameworks like React.</p>
-                </div>
-                <!-- Card 2 -->
-                <div class="card fade-up delay-100">
-                    <div class="card-icon">🤖</div>
-                    <h3>Artificial Intelligence</h3>
-                    <p>Dive into Python, Machine Learning, and Neural Networks.</p>
-                </div>
-                <!-- Card 3 -->
-                <div class="card fade-up delay-200">
-                    <div class="card-icon">🔒</div>
-                    <h3>Cyber Security</h3>
-                    <p>Understand ethical hacking, encryption, and network safety.</p>
-                </div>
-                <!-- End Member 3 -->
-            </div>
+     MEMBER 3 AREA: ACTIVITIES / WORKSHOPS
+     Branch: feature-activities
+========================================= -->
+<section id="activities" class="section section-dark">
+    <div class="container">
+        
+        <!-- Section Title -->
+        <div class="section-header">
+            <h2 class="section-title">🚀 Workshops & Activities</h2>
+            <p class="section-subtitle">
+                Explore hands-on learning experiences designed to boost your skills and creativity.
+            </p>
         </div>
-    </section>
 
-    <!-- =========================================
-         MEMBER 4 AREA: TEAM MEMBERS
-         Branch Name: feature-team
-         Task: Add profile cards for the club board members.
-         ========================================= -->
-    <section id="team" class="section-padding bg-light">
-        <div class="container">
-            <div class="section-title">
-                <h2>Meet The Team</h2>
+        <!-- Cards Container -->
+        <div class="workshops-grid">
+
+            <!-- Workshop Card 1 -->
+            <div class="workshop-card animate fade-up">
+                <div class="icon-box">💻</div>
+                <h3 class="workshop-title">Web Development</h3>
+                <p class="workshop-desc">
+                    Build websites using HTML, CSS, JavaScript, and modern libraries such as React or Vue.
+                </p>
+                <button class="workshop-btn">Learn More</button>
             </div>
-            <div class="team-grid">
-                <!-- TODO: Member 4 code goes here -->
-                <!-- Member 1 -->
-                <div class="team-member fade-in">
-                    <div class="avatar-placeholder"></div>
-                    <h4>Alex Johnson</h4>
-                    <span>Member 1</span>
-                </div>
-                <!-- Member 2 -->
-                <div class="team-member fade-in">
-                    <div class="avatar-placeholder"></div>
-                    <h4>Sarah Lee</h4>
-                    <span>Member 2</span>
-                </div>
-                <!-- Member 3 -->
-                <div class="team-member fade-in">
-                    <div class="avatar-placeholder"></div>
-                    <h4>Mike Chen</h4>
-                    <span>Member 3</span>
-                </div>
-                <!-- Member 4 -->
-                <div class="team-member fade-in">
-                    <div class="avatar-placeholder"></div>
-                    <h4>Emily Davis</h4>
-                    <span>Member 4</span>
-                </div>
-                <!-- End Member 4 -->
+            <!-- Workshop Card 2 -->
+            <div class="workshop-card animate fade-up delay-100">
+                <div class="icon-box">🤖</div>
+                <h3 class="workshop-title">Artificial Intelligence</h3>
+                <p class="workshop-desc">
+                    Discover Machine Learning, Neural Networks, and Python for AI applications.
+                </p>
+                <button class="workshop-btn">Join Session</button>
             </div>
+
+            <!-- Workshop Card 3 -->
+            <div class="workshop-card animate fade-up delay-200">
+                <div class="icon-box">🔒</div>
+                <h3 class="workshop-title">Cyber Security</h3>
+                <p class="workshop-desc">
+                    Learn ethical hacking, penetration testing, encryption, and secure networking techniques.
+                </p>
+                <button class="workshop-btn">Start Training</button>
+            </div>
+
         </div>
-    </section>
+    </div>
+</section>
+   <!-- =========================================
+     MEMBER 4 AREA: TEAM MEMBERS
+     Branch: feature-team
+========================================= -->
+<section id="team" class="section bg-light">
+    <div class="container">
 
+        <!-- Section Title -->
+        <div class="section-header">
+            <h2 class="section-title">👥 Meet The Team</h2>
+            <p class="section-subtitle">
+                The passionate members shaping the vision and leading the community.
+            </p>
+        </div>
+
+        <!-- Team Grid -->
+        <div class="team-grid">
+
+            <!-- Member 1 -->
+            <div class="team-card animate fade-in">
+                <div class="team-avatar"></div>
+                <h4 class="team-name">Alex Johnson</h4>
+                <span class="team-role">President</span>
+                <button class="team-btn">View Profile</button>
+            </div>
+
+            <!-- Member 2 -->
+            <div class="team-card animate fade-in delay-100">
+                <div class="team-avatar"></div>
+                <h4 class="team-name">Sarah Lee</h4>
+                <span class="team-role">Vice President</span>
+                <button class="team-btn">View Profile</button>
+            </div>
+
+            <!-- Member 3 -->
+            <div class="team-card animate fade-in delay-200">
+                <div class="team-avatar"></div>
+                <h4 class="team-name">Mike Chen</h4>
+                <span class="team-role">Technical Lead</span>
+                <button class="team-btn">View Profile</button>
+            </div>
+
+            <!-- Member 4 -->
+            <div class="team-card animate fade-in delay-300">
+                <div class="team-avatar"></div>
+                <h4 class="team-name">Emily Davis</h4>
+                <span class="team-role">Event Manager</span>
+                <button class="team-btn">View Profile</button>
+            </div>
+
+        </div>
+    </div>
+</section>
     <!-- =========================================
          OPTIONAL / BONUS: CONTACT SECTION
          Can be done by anyone who finishes early
