--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             position: fixed;
             bottom: 20px;
             right: 20px;
-            background-color: #333; /* Dark background */
+            background-color: #3d22d4; /* Dark background */
             color: #fff; /* White text */
             padding: 8px 15px;
             border-radius: 5px;
