--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         /* Styling for the new event CTA section */
         #event-cta {
-            background-color: #007bff;
+            background-color: #00ff66;
             color: white;
             padding: 60px 0;
             text-align: center;
