--- a/index.html
+++ b/index.html
@@ -122,26 +122,26 @@
                 <!-- Member 1 -->
                 <div class="team-member fade-in">
                     <div class="avatar-placeholder"></div>
-                    <h4>Alex Johnson</h4>
-                    <span>Member 1</span>
+                    <h4>Assil Laghrib</h4>
+                    <span>Slave 1</span>
                 </div>
                 <!-- Member 2 -->
                 <div class="team-member fade-in">
                     <div class="avatar-placeholder"></div>
-                    <h4>Sarah Lee</h4>
-                    <span>Member 2</span>
+                    <h4>Oubrich Mohammed</h4>
+                    <span>Slave 2</span>
                 </div>
                 <!-- Member 3 -->
                 <div class="team-member fade-in">
                     <div class="avatar-placeholder"></div>
-                    <h4>Mike Chen</h4>
-                    <span>Member 3</span>
+                    <h4>Basma Abbis</h4>
+                    <span>Slave 3</span>
                 </div>
                 <!-- Member 4 -->
                 <div class="team-member fade-in">
                     <div class="avatar-placeholder"></div>
-                    <h4>Emily Davis</h4>
-                    <span>Member 4</span>
+                    <h4>El Arabi Serghini Oubay</h4>
+                    <span>Team leader</span>
                 </div>
                 <!-- End Member 4 -->
             </div>
